# django_ecom

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker_image_and_test.yml
account/: urls.py  views.py
api/: urls.py  views.py
auth_app/: forms.py  urls.py  views.py
cart/: cart.py  urls.py  views.py
core/: urls.py  views.py
furnituresite/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_options.py
product/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_product.py  0003_product_image_product_thumbnail.py  0004_alter_product_thumbnail.py  0005_alter_category_options_review.py
templates/account/: edit_account.html  my_account.html
templates/auth/: login.html  signup.html
templates/cart/: cart.html  checkout.html  menu_cart.html  success.html
templates/cart/partials/: cart_item.html  menu_cart.html
templates/core/: base.html  frontpage.html  shop.html
templates/product/: product.html
templates/product/partials/: product_list_item.html
